<resources>
    <string name="app_name">internal_assessment</string>
    <string name="services">SERVICES</string>
    <string name="sort">SORT</string>
    <string name="add">ADD</string>
    <string name="completed_services">COMPLETED\nSERVICES</string>
    <string name="all_services">SERVICES\nSUMMARY</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string-array name="statuses_list">
        <item>received</item>
        <item>in progress</item>
        <item>ready to pickup</item>
        <item>completed</item>
    </string-array>

    <string-array name="add_statuses_list">
        <item>received</item>
        <item>in progress</item>
        <item>ready to pickup</item>
    </string-array>

    <string-array name="sorters_list">
        <item>by date (from the latest)</item>
        <item>by date (from the oldest)</item>
    </string-array>
</resources>