<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/services">
        <menu>
            <item android:title="@string/sort"
                android:icon="@drawable/ic_action_search"
                android:id="@+id/sortItem"/>
            <item android:title="@string/add"
                android:icon="@drawable/ic_action_add"
                android:id="@+id/addItem"/>
            <item
                android:id="@+id/completedServices"
                android:icon="@drawable/ic_action_reports"
                android:title="@string/completed_services" />
            <item
                android:id="@+id/allServices"
                android:icon="@drawable/ic_action_reports"
                android:title="@string/all_services" />
        </menu>
    </item>

</menu>